--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ Reset
 html {
   font-size: 62.5%;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body,
@@ -164,7 +164,6 @@ Navigation
 .nav__icons .icon__item:hover {
   background-color: var(--orange);
   border: 1px solid var(--black);
-
 }
 
 .nav__icons .icon__item:not(:last-child) {
@@ -407,7 +406,11 @@ Hero Area
 }
 
 .hero__left h1 {
-  margin-top: 1rem;
+  margin: 1rem 0;
+}
+
+.hero__left p {
+  margin-bottom: 1rem;
 }
 
 .hero__right {
@@ -426,7 +429,6 @@ Hero Media Query
 ======================
 */
 @media only screen and (max-width: 999px) {
-
   .hero__center {
     flex-direction: column;
     text-align: center;
@@ -677,7 +679,6 @@ span.dot::before {
   text-align: center;
 }
 
-
 .product ul svg {
   width: 1.7rem;
   height: 1.7rem;
@@ -693,11 +694,11 @@ span.dot::before {
   left: 50%;
   width: 17rem;
   height: 5rem;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, 0.5);
   opacity: 0;
   visibility: hidden;
-  transform: translate(-50%, -50%) scale(.7);
-  transition: .5s;
+  transform: translate(-50%, -50%) scale(0.7);
+  transition: 0.5s;
 }
 
 .product:hover ul {
@@ -719,7 +720,7 @@ span.dot::before {
   width: 3.5rem;
   height: 3.5rem;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .product ul a:hover {
@@ -729,13 +730,13 @@ span.dot::before {
 .product ul a::before {
   content: "";
   position: absolute;
-  top: -.6rem;
-  left: -.6rem;
+  top: -0.6rem;
+  left: -0.6rem;
   height: 0;
   width: 0;
   border-top: 3px solid var(--orange);
   border-left: 3px solid var(--orange);
-  transition: .5s;
+  transition: 0.5s;
   opacity: 0;
   z-index: 1;
 }
@@ -743,15 +744,15 @@ span.dot::before {
 .product ul a::after {
   content: "";
   position: absolute;
-  bottom: -.6rem;
-  right: -.6rem;
+  bottom: -0.6rem;
+  right: -0.6rem;
   width: 0;
   height: 0;
   border-bottom: 3px solid var(--orange);
   border-right: 3px solid var(--orange);
   z-index: 1;
   opacity: 0;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .product ul a:hover::before {
@@ -761,7 +762,6 @@ span.dot::before {
   border-left: 3px solid var(--black);
   opacity: 1;
 }
-
 
 .product ul a:hover::after {
   width: 126%;
@@ -918,7 +918,6 @@ Latest Products Media Query
 }
 
 @media only screen and (max-width: 768px) {
-
   .latest__products .glide__arrow--left,
   .related__products .glide__arrow--left {
     left: 70%;
@@ -1118,7 +1117,7 @@ Pop Up
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, .3);
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 1100;
   transition: 0.3s;
   transform: scale(1);
@@ -1239,7 +1238,7 @@ Pop Up
 }
 
 .hide__popup {
-  transform: scale(.2);
+  transform: scale(0.2);
   opacity: 0;
   visibility: hidden;
 }
@@ -1249,7 +1248,8 @@ Pop Up
 Go Up
 ======================
 */
-.goto-top {
+.goto-top:link,
+.goto-top:visited {
   position: fixed;
   right: 2%;
   bottom: 10%;
@@ -1257,7 +1257,7 @@ Go Up
   background-color: var(--orange);
   z-index: 20000;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .goto-top svg {
@@ -1271,7 +1271,6 @@ Go Up
 }
 
 @media only screen and (max-width: 1200px) {
-
   .right__content {
     width: 100%;
   }
@@ -1311,10 +1310,15 @@ Go Up
     padding: 1.8rem 0;
     margin-bottom: 1.5rem;
   }
+
+  .goto-top:link,
+  .goto-top:visited {
+    right: 5%;
+    bottom: 5%;
+  }
 }
 
 @media only screen and (max-width: 568px) {
-
   .popup__right {
     padding: 0 1.6rem;
   }
@@ -1349,7 +1353,6 @@ Go Up
   }
 
   .popup__close {
-
     top: 1rem;
     right: 1rem;
     padding: 1.3rem;
@@ -1456,7 +1459,7 @@ Testimonial
 
 .testimonial {
   position: relative;
-  background: url('./images/testimonial.jpg') center/cover no-repeat;
+  background: url("./images/testimonial.jpg") center/cover no-repeat;
   height: 50rem;
   padding: 5rem 0;
   z-index: 1;
@@ -1470,7 +1473,7 @@ Testimonial
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, .9);
+  background-color: rgba(0, 0, 0, 0.9);
   z-index: -1;
 }
 
@@ -1496,7 +1499,6 @@ Testimonial
   margin: 0 auto;
   height: 100%;
   color: #ccc;
-
 }
 
 .testimonial__box p {
@@ -1528,7 +1530,6 @@ Testimonial Media Query
 ======================
 */
 @media only screen and (max-width: 1200px) {
-
   .testimonial__box {
     height: 100%;
   }
@@ -1627,7 +1628,7 @@ News Section
   padding: 1.4rem 4rem;
   border: 1px solid var(--black);
   color: var(--black);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .card__footer a:hover {
@@ -1682,10 +1683,10 @@ NewsLetter
 .newsletter__link:visited {
   display: inline-block;
   padding: 1.4rem 3rem;
-  margin-left: -.5rem;
+  margin-left: -0.5rem;
   background-color: var(--black);
   color: var(--white);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .newsletter__link:hover {
@@ -1699,7 +1700,6 @@ Newsletter Media Query
 */
 
 @media only screen and (max-width: 998px) {
-
   .newsletter {
     padding: 6rem 4rem;
   }
@@ -1730,7 +1730,6 @@ Newsletter Media Query
     display: block;
     margin-bottom: 1.6rem;
   }
-
 }
 
 @media only screen and (max-width: 568px) {
@@ -1762,7 +1761,7 @@ Footer
 
 .footer {
   background-color: var(--black3);
-  padding: 6rem 1.rem;
+  padding: 6rem 1rem;
   line-height: 3rem;
 }
 
@@ -1787,7 +1786,7 @@ Footer
   display: block;
   color: var(--grey);
   font-size: 1.4rem;
-  transition: .6s;
+  transition: 0.6s;
 }
 
 .footer-top__box a:hover {
